// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon All icons - icon audio renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#audio"
  />
</svg>
`;

exports[`Icon All icons - icon book renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#book"
  />
</svg>
`;

exports[`Icon All icons - icon calendar renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#calendar"
  />
</svg>
`;

exports[`Icon All icons - icon check renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#check"
  />
</svg>
`;

exports[`Icon All icons - icon check-filled renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#check-filled"
  />
</svg>
`;

exports[`Icon All icons - icon close renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#close"
  />
</svg>
`;

exports[`Icon All icons - icon close-filled renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#close-filled"
  />
</svg>
`;

exports[`Icon All icons - icon copy renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#copy"
  />
</svg>
`;

exports[`Icon All icons - icon corner-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#corner-arrow"
  />
</svg>
`;

exports[`Icon All icons - icon digital renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#digital"
  />
</svg>
`;

exports[`Icon All icons - icon download renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#download"
  />
</svg>
`;

exports[`Icon All icons - icon edit renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#edit"
  />
</svg>
`;

exports[`Icon All icons - icon error renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#error"
  />
</svg>
`;

exports[`Icon All icons - icon external renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#external"
  />
</svg>
`;

exports[`Icon All icons - icon facebook renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#facebook"
  />
</svg>
`;

exports[`Icon All icons - icon faq renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#faq"
  />
</svg>
`;

exports[`Icon All icons - icon feedback renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#feedback"
  />
</svg>
`;

exports[`Icon All icons - icon file renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#file"
  />
</svg>
`;

exports[`Icon All icons - icon fullscreen renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#fullscreen"
  />
</svg>
`;

exports[`Icon All icons - icon gear renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#gear"
  />
</svg>
`;

exports[`Icon All icons - icon generic-lang renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#generic-lang"
  />
</svg>
`;

exports[`Icon All icons - icon global renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#global"
  />
</svg>
`;

exports[`Icon All icons - icon growth renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#growth"
  />
</svg>
`;

exports[`Icon All icons - icon hamburger renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#hamburger"
  />
</svg>
`;

exports[`Icon All icons - icon image renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#image"
  />
</svg>
`;

exports[`Icon All icons - icon infographic renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#infographic"
  />
</svg>
`;

exports[`Icon All icons - icon information renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#information"
  />
</svg>
`;

exports[`Icon All icons - icon instagram renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#instagram"
  />
</svg>
`;

exports[`Icon All icons - icon language renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#language"
  />
</svg>
`;

exports[`Icon All icons - icon linkedin renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#linkedin"
  />
</svg>
`;

exports[`Icon All icons - icon livestreaming renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#livestreaming"
  />
</svg>
`;

exports[`Icon All icons - icon location renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#location"
  />
</svg>
`;

exports[`Icon All icons - icon log-in renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#log-in"
  />
</svg>
`;

exports[`Icon All icons - icon logged-in renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#logged-in"
  />
</svg>
`;

exports[`Icon All icons - icon minus renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#minus"
  />
</svg>
`;

exports[`Icon All icons - icon multiple-files renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#multiple-files"
  />
</svg>
`;

exports[`Icon All icons - icon organigram renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#organigram"
  />
</svg>
`;

exports[`Icon All icons - icon pinterest renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#pinterest"
  />
</svg>
`;

exports[`Icon All icons - icon plus renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#plus"
  />
</svg>
`;

exports[`Icon All icons - icon print renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#print"
  />
</svg>
`;

exports[`Icon All icons - icon regulation renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#regulation"
  />
</svg>
`;

exports[`Icon All icons - icon rounded-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#rounded-arrow"
  />
</svg>
`;

exports[`Icon All icons - icon rss renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#rss"
  />
</svg>
`;

exports[`Icon All icons - icon search renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#search"
  />
</svg>
`;

exports[`Icon All icons - icon share renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#share"
  />
</svg>
`;

exports[`Icon All icons - icon skype renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#skype"
  />
</svg>
`;

exports[`Icon All icons - icon solid-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#solid-arrow"
  />
</svg>
`;

exports[`Icon All icons - icon spinner renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#spinner"
  />
</svg>
`;

exports[`Icon All icons - icon spreadsheet renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#spreadsheet"
  />
</svg>
`;

exports[`Icon All icons - icon success renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#success"
  />
</svg>
`;

exports[`Icon All icons - icon tag renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#tag"
  />
</svg>
`;

exports[`Icon All icons - icon twitter renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#twitter"
  />
</svg>
`;

exports[`Icon All icons - icon video renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#video"
  />
</svg>
`;

exports[`Icon All icons - icon warning renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#warning"
  />
</svg>
`;

exports[`Icon All icons - icon youtube renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#youtube"
  />
</svg>
`;

exports[`Icon Generic tests - Any icon renders correctly with accessibility content 1`] = `
<svg
  aria-hidden="false"
  aria-labelledby="example-title example-desc"
  class="ecl-icon ecl-icon--m"
  focusable="false"
  role="img"
>
  <title
    id="example-title"
  >
    Title
  </title>
  <desc
    id="example-desc"
  >
    Description
  </desc>
  <use
    xlink:href="/icons.svg#audio"
  />
</svg>
`;

exports[`Icon Generic tests - Any icon renders correctly with extra attributes 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#audio"
  />
</svg>
`;

exports[`Icon Generic tests - Any icon renders correctly with extra class names 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m custom-class custom-class--test"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#audio"
  />
</svg>
`;
